[tool.poetry]
name = "cse_6242_group_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
streamlit = "^1.8.1"
pyspark = "^3.2.1"
pandas = "^1.4.2"
sklearn = "^0.0"
pyarrow = "^7.0.0"
watchdog = "^2.1.7"
awswrangler = "^2.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
